:bug: fix padding on mobile hero banner

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -64,6 +64,7 @@ body {
 
       @media (max-width: $mobileBreakpoint) {
         margin-top: calc(min(calc(39vw + 48px), calc(303px + 48px)));
+        padding: 0 24px;
       }
 
       .hero-heading {
